create a simple note-taking app with Google OAuth authentication. Updated README with new features, setup instructions, and API endpoints. Removed user management functionality and added note management routes and controllers. Updated dependencies for Google authentication and JWT support. Enhanced frontend with routing and improved UI components.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,5 +6,13 @@ NODE_ENV=development
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=7d
+
 # CORS Configuration
 FRONTEND_URL=http://localhost:5173
