--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 # Backend API URL
 VITE_API_URL=http://localhost:5000
+
+
+VITE_GOOGLE_CLIENT_ID=870774976201-adsh6hv7cvpb0sib0t786mk8hivdpat3.apps.googleusercontent.com
